2002-01-28 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* New ship (the Revoker).....unit file not finished

2002-01-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* wrote rather complex mission
	

2002-01-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* wrote Order AIPatrol that can patrol around an area/unit
	  uses modules/ai_patrol.c

	
2002-01-26 Daniel Horn <hellcatv@hotmail.com>
	* fixed bug that about 1 in 1000 units leaves a ghost behind on the collide board.
	* scans entire collide table when a unit is leaving systems or dying
	* testing with missions/totalwar2.mission
	

2002-01-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* updated systems a bit
	* started to work on AI scripting again
	- wrote Order AIFlyToWaypoint that uses the module ai_flyto_waypoint.c
	

2002-01-25 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* Added fiery galaxy....looks much better than the others!

2002-01-25 Daniel Horn <hellcatv@users.sourceforge.net>

	* Warp effect now looks cool!
	* Fixed bug with deletion of animations
	* Added entering jump effect.
	* Fixed bug with SubUnit being set on random planets, and collisions not being checked against them
	* Added feature that planets may be targetted anywhere due to their size
	
2002-01-25 Daniel Horn <hellcatv@users.sourceforge.net>
	
	* Fixed a whole lot of lighting problems with local lights. Not all are fixed, but enough to do the standard things I think.
	* Fixed a lot of problems with collision tables and multiple systems (weapons used to be left behind, which would cause random crashes
	* Added AI jumping through jump portals.
	* Made AI follow human through jumping
	* Made all players exit at a jump point that would lead back to original system
	* Added an animation (right now explosion) that will play before jumping